Make VipManager compatible with older Java source level